--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -1,85 +1,49 @@
-name: Flutter Build APK, AAB, and IPA
-
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
       - main
-
+      - master
+  push:
+    branches:
+      - main
+      - master
+      - develop
+name: "Build & Release"
 jobs:
-  build-android:
-    name: Build APK & AAB
-    runs-on: ubuntu-latest
-
-    steps:
-      # Step 1: Checkout the code
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # Step 2: Set up Flutter
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: 'stable'
-
-      # Step 3: Install dependencies
-      - name: Install dependencies
-        run: flutter pub get
-
-      # Step 4: Run tests
-      - name: Run tests
-        run: flutter test
-
-      # Step 5: Build APK
-      - name: Build APK
-        run: flutter build apk --release
-
-      # Step 6: Build AAB
-      - name: Build AAB
-        run: flutter build appbundle --release
-
-      # Step 7: Upload APK as artifact
-      - name: Upload APK
-        uses: actions/upload-artifact@v3
-        with:
-          name: app-release.apk
-          path: build/app/outputs/flutter-apk/app-release.apk
-
-      # Step 8: Upload AAB as artifact
-      - name: Upload AAB
-        uses: actions/upload-artifact@v3
-        with:
-          name: app-release.aab
-          path: build/app/outputs/bundle/release/app-release.aab
-
-  build-ios:
-    name: Build IPA
+  build:
+    name: Build & Release
     runs-on: macos-latest
-
     steps:
-      # Step 1: Checkout the code
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # Step 2: Set up Flutter
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
-          flutter-version: 'stable'
-
-      # Step 3: Install dependencies
-      - name: Install dependencies
-        run: flutter pub get
-
-      # Step 4: Build IPA
-      - name: Build IPA
-        run: flutter build ios --release --no-codesign
-
-      # Step 5: Upload IPA as artifact
-      - name: Upload IPA
-        uses: actions/upload-artifact@v3
+          distribution: 'zulu'
+          java-version: '12'
+      - uses: subosito/flutter-action@v2
         with:
-          name: app-release.ipa
-          path: build/ios/ipa/*.ipa
+          channel: 'stable'
+          architecture: x64
+
+      - run: flutter build apk --release --split-per-abi
+      - run: |
+          flutter build ios --no-codesign
+          cd build/ios/iphoneos
+          mkdir Payload
+          cd Payload
+          ln -s ../Runner.app
+          cd ..
+          zip -r app.ipa Payload
+      - name: Push to Releases
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "build/app/outputs/apk/release/*,build/ios/iphoneos/app.ipa"
+          tag: v1.0.${{ github.run_number }}
+          token: ${{ secrets.TOKEN }}
+
+
+
+
+
+
+# push to master, main, develop
+# pull request on main master
